# simulacao-estacionamento

./: CMakeLists.txt  estacionar.c  main.c  ruaFila.h
glade/: window.glade  window.glade~
src/: main.c
